# Distributed_SLAM

./: CMakeLists.txt
Examples/Applications/: CMakeLists.txt  distributed.cpp  distributed.h
Examples/Distributed/: DistributedSystem.cpp  DistributedSystem.h  Distributed_stereo.cpp  Distributed_stereo_bkp.cpp  KITTI00-02.yaml
Examples/Stereo/: myKITTI00-02.yaml  stereo_kitti.cc
include/: Frame.h  GeometricTools.h  LocalMapping.h  LoopClosing.h  MLPnPsolver.h  ORBextractor.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  Settings.h  Sim3Solver.h  System.h  Tracking.h
include/Atlas/: KeyFrame.h  KeyFrameDatabase.h  Map.h  MapPoint.h
include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
include/Distributed/: DAtlas.h  DViewer.h  Viewer.h
include/Types/: Converter.h  ImuTypes.h
include/Visualise/: FrameDrawer.h  G2oTypes.h  ImuTypes.h  MapDrawer.h  SerializationUtils.h  TwoViewReconstruction.h  Viewer.h
shell/: gen_all_files.py  run_Distrib_stero_kitti.sh  run_stero_kitti.sh
src/: Frame.cc  GeometricTools.cc  LocalMapping.cc  LoopClosing.cc  MLPnPsolver.cpp  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  Settings.cc  Sim3Solver.cc  System.cc  Tracking.cc
src/Atlas/: Atlas.cc  KeyFrame.cc  KeyFrameDatabase.cc  Map.cc  MapPoint.cc
src/CameraModels/: KannalaBrandt8.cpp  Pinhole.cpp
src/Disctributed/: DAtlas.cpp  DViewer.cpp  Viewer.cpp
src/Types/: Converter.cc  G2oTypes.cc  ImuTypes.cc
src/Visualise/: FrameDrawer.cc  MapDrawer.cc  TwoViewReconstruction.cc  Viewer.cc
